Browser UI: increased search bar font size by a little, added background to body which helps with the layout laging behind when resizing the window from the left; Google won't get searched when you don't enter anything in the search bar anymore; Fixed searchbar being unselected on the consecutive focuses on it.

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -153,7 +153,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12pt;
     
-    color: var(--text-color)
+    color: var(--text-color);
+    background: var(--background-color);
 }
 
 #progressBar {
@@ -241,7 +242,7 @@ body {
 
     cursor: default !important;
     
-    font-size: 11pt;
+    font-size: 11.2pt;
 }
 
 #searchBar:focus {
